--- a/main.html
+++ b/main.html
@@ -8,6 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<div style="background-color:lightblue; border:15px solid blue; margin:20px;width:300px;  ">
+		<p>This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.</p>
+	</div>
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
