--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 
-	<div style="background-color:lightblue; border:15px solid blue; margin:20px;width:300px;  ">
+	<div style="background-color:lightblue; border:15px solid blue;padding:50px; margin:20px;width:300px;  ">
 		<p>This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.</p>
 	</div>
 
