--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 
-	<div style="background-color:lightblue; border:15px solid blue;padding:50px; margin:20px;width:300px; box-sizing:border-box;  ">
-		<p>This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.</p>
+	<div style="background-color:lightblue; border:15px solid blue;padding:50px; margin:20px;width:300px;  ">
+		<p>This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test cases.</p>
 	</div>
 
 
